Artist final changes
