# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\ArtController;
+use App\Http\Controllers\ArtistController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -21,4 +22,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::apiResource('/art', ArtController::class);
 
-// Route::apiResource('/art', ArtController::class);
+Route::apiResource('/artists', ArtistController::class);
